add native renderer plugin

--- a/.gitignore
+++ b/.gitignore
@@ -31,11 +31,13 @@ ExportedObj/
 Icon?
 ehthumbs.db
 Thumbs.db
-
+# ============ #
+# Xcode generated #
+# ============ #
+*.xcworkspace
 # ============ #
 # for others   #
 # ============ #
-
 *.log #log files, for some plugins
 *.pyc #python bytecode cache, for some plugins.
 sysinfo.txt #Unity3D Generated File On Crash Reports
