--- a/UnityPlugin/Assets/Plugins/iOS/Frameworks/Line/LineAdapter.framework/Versions/A/Resources/Info.plist
+++ b/UnityPlugin/Assets/Plugins/iOS/Frameworks/Line/LineAdapter.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>15F34</string>
+	<string>15G1212</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -25,18 +25,18 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>7D1014</string>
+	<string>8C1002</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>15F34</string>
+	<string>15G1212</string>
 	<key>DTSDKName</key>
-	<string>iphoneos9.3</string>
+	<string>iphoneos10.2</string>
 	<key>DTXcode</key>
-	<string>0731</string>
+	<string>0821</string>
 	<key>DTXcodeBuild</key>
-	<string>7D1014</string>
+	<string>8C1002</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 NHN. All rights reserved.</string>
+	<string>Copyright © 2017 NHN. All rights reserved.</string>
 </dict>
 </plist>
