--- a/UnityAndroidPlugin/app/src/main/AndroidManifest.xml
+++ b/UnityAndroidPlugin/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ucreates.unity.android.plugin">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ucreates.unityplugin">
     <application android:allowBackup="true" android:label="@string/app_name" android:supportsRtl="true">
     </application>
 </manifest>
