--- a/UnityPlugin/Assets/Plugins/Android/AndroidManifest.xml
+++ b/UnityPlugin/Assets/Plugins/Android/AndroidManifest.xml
@@ -30,15 +30,29 @@
                 <action android:name="com.twitter.sdk.android.tweetcomposer.UPLOAD_FAILURE"/>
             </intent-filter>
         </receiver>
+        <receiver android:name="com.frontend.receiver.notify.RemoteNotifierBroadcastReceiverPlugin" android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="com.ucreates.unityplugin" />
+            </intent-filter>
+        </receiver>
         <provider android:authorities="com.facebook.app.FacebookContentProviderFACEBOOK_APP_ID" android:name="com.facebook.FacebookContentProvider" android:exported="true" />
+        <service android:name="com.service.notify.RemoteNotifierIntentServicePlugin" />
         <meta-data android:name="io.fabric.ApiKey" android:value="FABRIC_API_KEY" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="FACEBOOK_APP_ID" />
         <meta-data android:name="jp.line.sdk.ChannelId" android:value="LINE_CHANNEL_ID" />
         <meta-data android:name="jp.line.sdk.AuthScheme" android:value="line.LINE_CHANNEL_ID" />
     </application>
+    <permission android:name="com.ucreates.unityplugin.permission.C2D_MESSAGE" android:protectionLevel="signature" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="com.ucreates.unityplugin.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.ucreates.unityplugin.c2dm.permission.RECEIVE" />
     <uses-feature android:glEsVersion="0x00020000"/>
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
     <uses-feature android:name="android.hardware.touchscreen.multitouch" android:required="false"/>
